- added toc favicon - fixed collapsed menu item color

--- a/css/bootstrap-responsive.css
+++ b/css/bootstrap-responsive.css
@@ -978,7 +978,7 @@
   .nav-collapse .dropdown-menu a {
     padding: 9px 15px;
     font-weight: bold;
-    color: #eee;
+    color: #bd362f;
   }
   .nav-collapse .btn {
     padding: 4px 10px 4px;
